[Monitoring_Agent] Simple scenario works!